@@ -1,21 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>practise</groupId>
-    <artifactId>practise</artifactId>
+    <groupId>practice</groupId>
+    <artifactId>practice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <properties>
-        <junit.jupiter.version>5.3.0</junit.jupiter.version>
+        <junit.jupiter.version>5.4.0</junit.jupiter.version>
     </properties>
 
     <repositories>
         <repository>
             <id>ali</id>
-            <url>https://maven.aliyun.com/repository/central</url>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
     </repositories>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
@@ -23,11 +29,11 @@
             <version>2.6</version>
         </dependency>
 
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.11.1</version>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.11.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -69,11 +75,10 @@
             <version>2.1.1</version>
         </dependency>
         <dependency>
-            <groupId>jaxen</groupId>
-            <artifactId>jaxen</artifactId>
-            <version>1.1.6</version>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>LATEST</version>
         </dependency>
-
 
     </dependencies>
 
@@ -87,20 +92,19 @@
                     <exclude>**/*.java</exclude>
                 </excludes>
             </resource>
-            <!--<resource>-->
-                <!--<directory>src-temp</directory>-->
-                <!--<excludes>-->
-                    <!--<exclude>**/*.java</exclude>-->
-                <!--</excludes>-->
-            <!--</resource>-->
         </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/jdk.internal.misc=practice</arg>
+                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=practice</arg>
+                        <!--<arg>&#45;&#45;patch-module=java.base=${basedir}/src/main/java</arg>-->
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
